tests/ui/traits/const-traits/default-method-body-is-const-same-trait-ck.stderr
error[E0277]: the trait bound `(): [const] Tr` is not satisfied
  --> $DIR/default-method-body-is-const-same-trait-ck.rs:9:12
   |
LL |         ().a()
   |            ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
